Added WatchPal to projects

--- a/index.html
+++ b/index.html
@@ -253,6 +253,17 @@
       <!-- Project Gallery -->
       <div class="projects-gallery">
         <div class="project-card">
+          <img src="/Portfolio/WatchPal.png" alt="WatchPal website screenshot showing movie recommendations" class="project-img" loading="lazy" width="400" height="300">
+          <h3>WatchPal</h3>
+          <p>A website I made for helping you find a TV show or movie to watch.</p>
+          <div class="tech-stack">
+            <span class="tech-tag">HTML</span>
+            <span class="tech-tag">CSS</span>
+            <span class="tech-tag">JavaScript</span>
+          </div>
+          <a href="https://watchpal.ryancodes.xyz" class="project-btn" target="_blank" rel="noopener noreferrer">View Project</a>
+        </div>
+        <div class="project-card">
           <img src="/Portfolio/War.png" alt="War Card Game iOS app screenshot showing card game interface" class="project-img" loading="lazy" width="400" height="300">
           <h3>War Card Game</h3>
           <p>A simple war card game I made for iOS using Swift.</p>
