watchpal link update

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <span class="tech-tag">CSS</span>
             <span class="tech-tag">JavaScript</span>
           </div>
-          <a href="https://watchpal.ryancodes.xyz" class="project-btn" target="_blank" rel="noopener noreferrer">View Project</a>
+          <a href="https://watchpal.xyz" class="project-btn" target="_blank" rel="noopener noreferrer">View Project</a>
         </div>
         <div class="project-card">
           <img src="/Portfolio/War.png" alt="War Card Game iOS app screenshot showing card game interface" class="project-img" loading="lazy" width="400" height="300">
