--- a/index.html
+++ b/index.html
@@ -336,6 +336,64 @@
             <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M7 17L17 7"/><path d="M7 7h10v10"/></svg>
           </a>
         </div>
+
+        <div class="project-card">
+          <div class="project-img-wrapper">
+            <img src="Portfolio/WatchPalApp.png" alt="WatchPal App" class="project-img" loading="lazy">
+            <div class="project-badge">📱</div>
+          </div>
+          <div class="project-content">
+            <h3>WatchPal App</h3>
+            <p>An iOS app version of WatchPal to help you find what to watch on the go.</p>
+            <div class="tech-stack">
+              <span class="tech-tag">Swift</span>
+              <span class="tech-tag">iOS</span>
+              <span class="tech-tag">Coming Soon</span>
+            </div>
+          </div>
+          <div class="project-btn disabled-btn">
+            Coming Soon
+            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"/><path d="M7 11V7a5 5 0 0 1 10 0v4"/></svg>
+          </div>
+        </div>
+
+        <div class="project-card mysterious-card">
+          <div class="project-img-wrapper">
+            <img src="Portfolio/Focus Hack.png" alt="Focus Hack" class="project-img mysterious-img" loading="lazy">
+            <div class="project-badge">❓</div>
+          </div>
+          <div class="project-content">
+            <h3>Focus Hack</h3>
+            <p>Something mysterious is in the works. A new way to level up your productivity is coming soon...</p>
+            <div class="tech-stack">
+              <span class="tech-tag">???</span>
+              <span class="tech-tag">Coming Soon</span>
+            </div>
+          </div>
+          <div class="project-btn disabled-btn">
+            Coming Soon
+            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"/><path d="M7 11V7a5 5 0 0 1 10 0v4"/></svg>
+          </div>
+        </div>
+
+        <div class="project-card mysterious-card">
+          <div class="project-img-wrapper">
+            <img src="Portfolio/RACK-IT.png" alt="Rack It" class="project-img mysterious-img" loading="lazy">
+            <div class="project-badge">❓</div>
+          </div>
+          <div class="project-content">
+            <h3>Rack It</h3>
+            <p>Another mysterious project is being forged. Get ready to rack up some serious progress soon...</p>
+            <div class="tech-stack">
+              <span class="tech-tag">???</span>
+              <span class="tech-tag">Coming Soon</span>
+            </div>
+          </div>
+          <div class="project-btn disabled-btn">
+            Coming Soon
+            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"/><path d="M7 11V7a5 5 0 0 1 10 0v4"/></svg>
+          </div>
+        </div>
       </div>
     </section>
 
