chore: update project status from "Coming Soon" to "Awaiting Approval"

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <div class="tech-stack">
               <span class="tech-tag">Swift</span>
               <span class="tech-tag">iOS</span>
-              <span class="tech-tag">Coming Soon</span>
+              <span class="tech-tag">Awaiting Approval</span>
             </div>
           </div>
           <div class="project-btn disabled-btn">
