chore: update project status tag from 'Coming Soon' to 'Awaiting Approval'.

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <p>Another mysterious project is being forged. Get ready to rack up some serious progress soon...</p>
             <div class="tech-stack">
               <span class="tech-tag">???</span>
-              <span class="tech-tag">Coming Soon</span>
+              <span class="tech-tag">Awaiting Approval</span>
             </div>
           </div>
           <div class="project-btn disabled-btn">
