--- a/index.html
+++ b/index.html
@@ -617,6 +617,28 @@
     <p>© Ryan Kiapour 2026</p>
   </footer>
 
+  <!-- Helper Portal -->
+  <div id="helper-portal" class="helper-portal">
+    <div class="portal-ring"></div>
+    <div class="helper-character">
+      <div class="helper-bot">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <rect x="3" y="11" width="18" height="10" rx="2" />
+          <circle cx="12" cy="5" r="2" />
+          <path d="M12 7v4" />
+          <line x1="8" y1="16" x2="8" y2="16.01" />
+          <line x1="16" y1="16" x2="16" y2="16.01" />
+        </svg>
+      </div>
+      <div class="helper-tooltip">
+        <button class="helper-close" aria-label="Dismiss">&times;</button>
+        <div class="helper-text">
+          <strong>Psst!</strong> Did you know if you right click one of the hidden project images and open it in a new tab, you can see what it is? 😉
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- JavaScript -->
   <script src="js/main.js" defer></script>
   <script src="js/cursor.js" defer></script>
